<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.macbookair.calculator.MainActivity">

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="0"
        android:textSize="80sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtResult"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="90dp"
                android:layout_height="65dp"
                android:background="@color/EqualSignColor"
                android:onClick="getBtnText"
                android:text="@string/_7"
                android:textSize="30sp" />

            <Button
                android:layout_width="90dp"
                android:layout_height="65dp"
                android:background="@color/EqualSignColor"
                android:onClick="getBtnText"
                android:text="@string/_8"
                android:textSize="30sp" />

            <Button
                android:layout_width="90dp"
                android:layout_height="65dp"
                android:background="@color/EqualSignColor"
                android:onClick="getBtnText"
                android:text="@string/_9"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnDiv"
                android:layout_width="113dp"
                android:layout_height="65dp"
                android:background="@color/SignsBackgroundColor"
                android:onClick="OperationSignedClicked"
                android:text="@string/Div"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="90dp"
                android:layout_height="65dp"
                android:background="@color/EqualSignColor"
                android:text="@string/_4"
                android:textSize="30sp"
                android:onClick="getBtnText" />

            <Button
                android:layout_width="90dp"
                android:layout_height="65dp"
                android:background="@color/EqualSignColor"
                android:onClick="getBtnText"
                android:text="@string/_5"
                android:textSize="30sp" />

            <Button
                android:layout_width="90dp"
                android:layout_height="65dp"
                android:background="@color/EqualSignColor"
                android:onClick="getBtnText"
                android:text="@string/_6"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnMul"
                android:layout_width="113dp"
                android:layout_height="65dp"
                android:background="@color/SignsBackgroundColor"
                android:onClick="OperationSignedClicked"
                android:text="@string/Mul"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="90dp"
                android:layout_height="65dp"
                android:background="@color/EqualSignColor"
                android:onClick="getBtnText"
                android:text="@string/_1"
                android:textSize="30sp" />

            <Button
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:background="@color/EqualSignColor"
                android:onClick="getBtnText"
                android:text="@string/_2"
                android:textSize="30sp" />

            <Button
                android:layout_width="90dp"
                android:layout_height="65dp"
                android:background="@color/EqualSignColor"
                android:onClick="getBtnText"
                android:text="@string/_3"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnSub"
                android:layout_width="113dp"
                android:layout_height="65dp"
                android:background="@color/SignsBackgroundColor"
                android:onClick="OperationSignedClicked"
                android:text="@string/Sub"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="90dp"
                android:layout_height="65dp"
                android:background="@color/EqualSignColor"
                android:onClick="getBtnText"
                android:text="@string/_0"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnEqual"
                android:layout_width="90dp"
                android:layout_height="65dp"
                android:background="@color/EqualSignBackgroundColor"
                android:onClick="btnEqualEvent"
                android:text="@string/Equal"
                android:textColor="@color/EqualSignColor"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnClear"
                android:layout_width="90dp"
                android:layout_height="65dp"
                android:background="@color/SignsBackgroundColor"
                android:onClick="btnClearEvent"
                android:text="@string/Clear"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="30sp" />


            <Button
                android:id="@+id/btnSum"
                android:layout_width="113dp"
                android:layout_height="65dp"
                android:background="@color/SignsBackgroundColor"
                android:text="@string/Sum"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="30sp"
                android:onClick="OperationSignedClicked" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
